# jobd

./: .gitignore  .gitmodules  .travis.yml  AUTHORS.md  BUGS  CHANGELOG.md  CMakeLists.txt  ChangeLog.md  GNUmakefile  INDEX  LICENSE  Makefile  Makefile.FreeBSD  Makefile.OLD  Makefile.inc  README.md  Vagrantfile  apa.html  array.h  calendar.c  calendar.h  ch01.html  ch01s02.html  ch02.html  ch03.html  clock.h  com.acme.thttpd.json  com.heily.relaunchd.tinyproxy.json  config.h.in  config.inc.in  config.sub  configure  cvec.h  database.c  database.h  distinfo  event_loop.c  event_loop.h  flopen.c  index.html  (+60 more)
doc/: capsicum.md  concept-job.dia  hier.md  jails.md  pcbsd.md  sockets.txt
doc/handbook/: .gitignore  Makefile  book.xml  sect1-design.xml  sect1-service_manager.xml  sect1-terminology.xml  sect2-capsicum.xml  sect2-compilation.xml
doc/notes/: README.md  replacing_init.md
examples/: apache-in-jail.json
examples/jails/: org.freebsd.ports.owncloud.json
include/: launch.h
include/job/: descriptor.h
manifests/freebsd-jail/: README.md
manifests/pcbsd/agents/: org.pcbsd.disable-beep.json  org.pcbsd.enable-ibus.json  org.pcbsd.enable-xprofile.json  org.pcbsd.gpg-agent.json  org.pcbsd.life-preserver-tray.json  org.pcbsd.pc-mixer.json  org.pcbsd.pc-mounttray.json  org.pcbsd.pc-systemupdatertray.json  org.pcbsd.ssh-agent.json  org.pcbsd.xscreensaver.json
manifests/pcbsd/daemons/: org.pcbsd.syscache-daemon.json
patches/: FreeBSD-rc-hooks.diff
ports/FreeBSD/: Makefile  pkg-descr  pkg-plist
ports/Linux-RPM/: relaunchd.spec
sa-wrapper/: Makefile  setup-plist.rb  test-wrapper.c  test-wrapper.sh  wrapper.c
scripts/: configure  setup_tinyproxy.sh
share/manifests/FreeBSD/: jobd-db_reopen.toml  rc.toml  sysctl.toml
src/: calendar.c  calendar.h  chroot.cpp  chroot.h  clock.h  configure  cvec.h  database.c  database.h  dataset.cpp  dataset.h  event_loop.h  ipc.c  ipc.h  jail.c  jail.h  job.c  job.h  keepalive.c  launchcfg  launchctl  launchd.c  launchd.cpp  log.c  log.h  manager.c  manager.h  manifest.c  manifest.h  options.h  package.c  package.h  pidfile.c  socket.c  socket.h  timer.c  timer.h  uset.h  util.h
src/bind-wrapper/: configure  test-wrapper.c  wrapper.c
src/job/: configure  main.cpp
src/jobadm/: .gitignore  configure  jobadm.1.xml  main.cpp
src/jobcfg/: .gitignore  configure  jobcfg.1  jobcfg.1.xml
src/jobctl/: .gitignore  configure  jobctl.1.xml  main.cpp
src/jobd/: .gitignore  calendar.cpp  capsicum.cpp  capsicum.h  chroot.cpp  chroot.h  clock.h  configure  cvec.h  daemon.h  dataset.cpp  dataset.h  descriptor.cpp  descriptor.h  flopen.c  ipc.cpp  ipc.h  jail.cpp  jail.h  job.cpp  job.h  jobd.1  jobd.8  jobd.8.xml  keepalive.cpp  keepalive.h  log.h  main.cpp  manager.cpp  manager.h  manifest.cpp  manifest.h  options.h  pidfile.h  socket.cpp  socket.h  timer.cpp
src/launchctl/: configure  launchctl.c
src/libjob/: .gitignore  configure  ipc.cpp  ipc.h  job.5  job.5.xml  job.h  jobProperty.cpp  jobProperty.hpp  jobStatus.cpp  jobStatus.hpp  jsonRPC.hpp  libjob.cpp  libjob.so.1  logger.cpp  logger.h  manifest.cpp  manifest.hpp  namespaceImport.hpp  parser.hpp
src/liblaunch-socket/: .gitignore  configure  setup-plist.rb  wrapper.c
src/rfs/: configure  rfs-stub.c  rfs.c  test.c
test/: .gitignore  GNUmakefile  Makefile  build.sh  configure  debug.sh  jail-test.c  jail-test.rb  jmtest.c  manifest-test.c  pid1.sh  run.sh  socket-activation.rb  test-socket-activation.sh  vagrant.sh
test/calendar/: calendar-test.c  configure
test/calendar/fixtures/: cron1.json
test/capsicum/: .gitignore  Makefile  captest.c  captest.json  captest.json.in
test/chroot_jail/: README  test.json
test/clang-analyzer/: Makefile  configure
test/database/: configure  database-test.c
test/dataset/: README  test.json
test/fixtures/: echo.json  env2.json  invalid.json  sleepy.json  start_interval.json
test/jail/: configure  jail-test.c  jail-test.json
test/jmtest/: configure  jmtest.c
test/jmtest/fixtures/: echo.json  env.json  env2.json  id.json  invalid.json  sleepy.json  sockets.json  start_calendar_interval.json  start_interval.json  test.json
test/job/: configure  job.json  jobtest.c
test/job.d/: disable_me.toml  enable_me.toml  exclusive.toml  property_vars.toml  shutdown_handler.toml  sleep1.toml  stop_start.toml
test/manifest/: configure  manifest-test.c
test/timer/: configure  timer-test.c
test/timer/fixtures/: constant.json  cron1.json
